<resources>
    <string name="app_name">Playlist maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_media">Медиатека</string>
    <string name="button_tune">Настройки</string>
    <string name="button_playlist">Новый плейлист</string>
    <string name="tune_night_theme">Темная тема</string>
    <string name="tune_share_app">Поделиться приложением</string>
    <string name="tune_service">Написать в поддержку</string>
    <string name="tune_terms_of_use">Пользовательское соглашение</string>
    <string name="button_back">Назад</string>
    <string name="input_hint">Поиск</string>
    <string name="clear_desc">Очистить ввод</string>
    <string name="track_info">"%1$s \u00B7 %2$s"</string>
    <string name="track_empty">Ничего не нашлось</string>
    <string name="track_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="button_retry">Обновить</string>
    <string name="button_search_history_clear">Очистить историю</string>
    <string name="search_history_header">Вы искали</string>
    <string name="player_genre_caption">Жанр</string>
    <string name="player_country_caption">Страна</string>
    <string name="player_year_caption">Год</string>
    <string name="player_album_caption">Альбом</string>
    <string name="player_track_time_caption">Длительность</string>
    <string name="player_time_progress_default">00:00</string>
    <string name="player_description_play">воспроизвести</string>
    <string name="player_description_add">в playlist</string>
    <string name="player_description_like">нравится</string>
    <string name="player_service_error">Не удалось запустить сервис для прослушивания треков</string>
    <string name="favourites_empty">Ваша медиатека пуста</string>
    <string name="playlists_empty">Вы не создали\nни одного плейлиста</string>
    <string name="favourites_tab">Избранные треки</string>
    <string name="playlists_tab">Плейлисты</string>
    <string name="button_new_playlist">Новый плейлист</string>
    <string name="button_edit_playlist">Редактировать</string>
    <string name="label_playlist_name">Название*</string>
    <string name="label_playlist_description">Описание</string>
    <string name="button_create_playlist">Создать</string>
    <string name="button_save_playlist">Сохранить</string>
    <string name="title_playlist_bottom_sheet">Добавить в плейлист</string>
    <string name="playlist_share_button">поделиться плейлистом</string>
    <string name="playlist_menu_button">меню плейлиста</string>
    <string name="playlist_menu_share_button">Поделиться</string>
    <string name="playlist_menu_edit_button">Редактировать информацию</string>
    <string name="playlist_menu_delete_button">Удалить плейлист</string>
    <string name="playlist_statistics">"%1$s \u00B7 %2$s"</string>
    <string name="add_status_added">Добавлено в плейлист %s</string>
    <string name="playlist_tracks_empty">В этом плейлисте нет треков</string>
    <string name="add_status_exist">Трек уже добавлен в плейлист %s</string>
    <string name="add_status_error">Ошибка добавления в плейлист %s</string>

    <string name="share_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="terms_of_use_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="mailto">mailto:</string>
    <string name="service_email">beskrovnaia.elena@yandex.ru</string>
    <string name="service_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="service_email_body">Спасибо разработчикам и разработчицам за какое-то приложение!</string>

    <string name="create_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="create_playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="create_playlist_dialog_cancel_button">отмена</string>
    <string name="create_playlist_dialog_yes_button">завершить</string>

    <string name="delete_track_dialog_title">Удалить трек</string>
    <string name="delete_track_dialog_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete_track_dialog_cancel_button">отмена</string>
    <string name="delete_track_dialog_yes_button">удалить</string>
    <string name="share_playlist_empty_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_playlist_dialog_title">Удалить плейлист</string>
    <string name="delete_playlist_dialog_message">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="delete_playlist_dialog_cancel_button">отмена</string>
    <string name="delete_playlist_dialog_yes_button">удалить</string>
</resources>