<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/VerticalMainLayoutStyle"
    android:background="?attr/colorPrimary">

    <LinearLayout
        style="@style/HorizontalItemLayoutStyle">

        <ImageButton
            android:id="@+id/btSettingsBack"
            style="@style/BackImageButtonStyle"
            android:contentDescription="@string/button_back"
            tools:ignore="ImageContrastCheck" />

        <TextView
            style="@style/HeaderItemMenuTextStyle"
            android:text="@string/button_tune"/>
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/scNightTheme"
        style="@style/ItemMenuSwitchButtonStyle"
        android:layout_marginTop="60dp"
        android:text="@string/tune_night_theme"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btShareApp"
        style="@style/ItemMenuButtonStyle"
        android:text="@string/tune_share_app"
        app:icon="@drawable/ic_share"/>

    <Button
        android:id="@+id/btService"
        style="@style/ItemMenuButtonStyle"
        android:text="@string/tune_service"
        app:icon="@drawable/ic_support"/>

    <Button
        android:id="@+id/btTermsOfUse"
        style="@style/ItemMenuButtonStyle"
        android:text="@string/tune_terms_of_use"
        app:icon="@drawable/ic_arrow_forward"/>
</LinearLayout>