<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/VerticalMainLayoutStyle"
    android:background="?attr/colorSecondary"
    android:padding="@dimen/layout_padding">

    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/app_name"/>

    <Button
        android:id="@+id/btSearch"
        style="@style/MainMenuButtonStyle"
        android:layout_marginTop="32dp"
        android:text="@string/button_search"
        app:icon="@drawable/ic_search" />

    <Button
        android:id="@+id/btMedia"
        style="@style/MainMenuButtonStyle"
        android:text="@string/button_media"
        app:icon="@drawable/ic_media" />

    <Button
        android:id="@+id/btTune"
        style="@style/MainMenuButtonStyle"
        android:text="@string/button_tune"
        app:icon="@drawable/ic_tune" />
</LinearLayout>