<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SearchActivity"
    style="@style/VerticalMainLayoutStyle"
    android:background="?attr/colorPrimary">

    <LinearLayout
        style="@style/HorizontalItemLayoutStyle">

        <ImageButton
            android:id="@+id/btSearchBack"
            style="@style/BackImageButtonStyle"
            android:contentDescription="@string/button_back"
            tools:ignore="ImageContrastCheck" />

        <TextView
            style="@style/HeaderItemMenuTextStyle"
            android:text="@string/button_search"/>
    </LinearLayout>

    <FrameLayout
        style="@style/HorizontalItemLayoutStyle"
        android:layout_margin="@dimen/layout_padding">

        <EditText
            android:id="@+id/edSearch"
            style="@style/SearchEditTextStyle"
            android:inputType="text"
            android:hint="@string/input_hint"
            android:drawableStart="@drawable/ic_search"
            android:importantForAutofill="no" />

        <ImageView
            android:id="@+id/btClearSearch"
            style="@style/ClearEditImageViewStyle"
            android:contentDescription="@string/clear_desc"
            android:src="@drawable/ic_clear"
            android:visibility="gone"/>
    </FrameLayout>
</LinearLayout>